tests/machine/x/rust/save_jsonl_stdout.error
line 0: compile: exit status 1
error[E0308]: mismatched types
  --> /workspace/mochi/tests/machine/x/rust/save_jsonl_stdout.rs:11:102
   |
11 |     _save(people, "-", { let mut m = std::collections::BTreeMap::new(); m.insert("format", "jsonl"); m });
   |                                                                                                      ^ expected `HashMap<String, String>`, found `BTreeMap<&str, &str>`
   |
   = note: expected struct `HashMap<String, String>`
              found struct `BTreeMap<&str, &str>`

error[E0308]: mismatched types
  --> /workspace/mochi/tests/machine/x/rust/save_jsonl_stdout.rs:11:11
   |
11 |     _save(people, "-", { let mut m = std::collections::BTreeMap::new(); m.insert("format", "jsonl"); m });
   |     ----- ^^^^^^ expected `&[_]`, found `Vec<People>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected reference `&[_]`
                 found struct `Vec<People>`
note: function defined here
  --> /workspace/mochi/tests/machine/x/rust/save_jsonl_stdout.rs:7:4
   |
7  | fn _save<T>(_src: &[T], _path: &str, _opts: std::collections::HashMap<String, String>) { }
   |    ^^^^^    ----------
help: consider borrowing here
   |
11 |     _save(&people, "-", { let mut m = std::collections::BTreeMap::new(); m.insert("format", "jsonl"); m });
   |           +

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.

#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]